--- a/src/material-examples/tooltip-auto-hide/tooltip-auto-hide-example.css
+++ b/src/material-examples/tooltip-auto-hide/tooltip-auto-hide-example.css
@@ -1,6 +1,5 @@
 .example-button {
   display: block;
-  width: 48px;
   margin: 80px auto 400px;
 }
 
